--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -230,6 +230,12 @@ $breakpoint-xl: 1801px;
 $max-site-width: 1560px;
 
 ////////////////////////
+/// height Tokens
+///////////////////////
+$header-height: 60px;
+$user-management-height: 30px;
+
+////////////////////////
 /// Our tokens usually support at least 4 sizes.
 ///////////////////////
 $size-sm: 'sm';
